pages/css/home.css
:where(p) {
  font-size: inherit;
  font-weight: var(--theme--FontWeight);
  line-height: var(--theme--text--LineHeight);

  margin: 0;

  :is(b, strong) {
    font-weight: var(--theme--FontWeight--semi-bold);
  }

  &:is(.extra) {
    font-size: 1.2em;

    :is(b, strong) {
      font-weight: var(--theme--FontWeight--medium);
    }
  }
}

:is(h1, h2, h3, h4, h5, h6),
:is(.title, .headline) {
  font-family: var(--theme--heading--FontFamily);
  color: var(--theme--heading--Color);
  line-height: var(--theme--heading--LineHeight);
  margin-block-start: .8em;
  margin-block-end: 0;

  &:first-child {
    margin-block-start: 0;
  }

  &:where(.accent) {
    color: var(--theme--heading--Color--accent);
  }

  a {
    color: inherit;
    font-weight: inherit;
    text-decoration-color: color-mix(in sRGB, var(--theme--ui--color--subtle), black 20%);
    text-decoration-style: solid;
    text-decoration-line: underline;

    &:hover {
      color: var(--theme--link--Color--hover);
      text-decoration-color: var(--theme--link--Color--hover);
    }

    &:where(:focus, :focus-visible) {
      color: var(--theme--link--Color--focus);
      text-decoration: none;
    }
  }
}

/* Don't allow line-breaking for the brand text */
.brand {
  white-space: nowrap;
}

:is(img, embed, object, video) {
  max-inline-size: 100%;
  block-size: auto;
}

:is(p>code, li>code) {
  background: var(--theme--surface--color);
  color: var(--theme--text--Color);

  font-size: var(--theme--code--FontSize);
  font-weight: var(--theme--FontWeight);
  line-height: inherit;

  border: var(--theme--BorderWidth--thin) solid var(--theme--ui--color--subtle);
  border-radius: var(--theme--BorderRadius);
  padding: .2em .4em;
}

:is(ul, ol) {
  margin: 0;

  &:not(:last-child) {
    margin-block-end: 1.5em;
  }
}

:is(li) {
  margin: 0;

  &:not([class]) {
    font-size: .8em;
    line-height: var(--theme--LineHeight);
  }
}

:is(li:has(b, strong):not(:last-child)) {
  margin-block-end: .2em;
}

li :is(b, strong) {
  text-decoration: solid underline var(--theme--ui--color);
  text-decoration-thickness: var(--theme--BorderWidth);

  font-size: .9em;
  font-weight: var(--theme--FontWeight--medium);
}

:is(img) {
  aspect-ratio: var(--aspect-ratio, 1 / 1);
  inline-size: var(--image-size, 250px);
  block-size: auto;

  border-radius: var(--image--BorderRadius, var(--theme--BorderRadius));
  border: var(--image--BorderWidth, 0) solid var(--image--BorderColor, var(--theme--ui--color--subtle));
}

:is(iframe) {
  /* Fill the container */
  inline-size: min(var(--video--Width, 100%), 100%);

  /* Maintain the aspect ratio if specified */
  block-size: auto;

  &:where([src*="youtube.com"]) {
    aspect-ratio: 16 / 9;
  }
}

body {
  position: relative;

  font-family: var(--theme--text--FontFamily);
  line-height: var(--theme--text--LineHeight);

  font-size: 18px;

  scroll-snap-type: y mandatory;
  scroll-padding-block-start: 20px;

  overflow-y: auto;

  min-block-size: 100vh;

  display: flex;
  flex-flow: column nowrap;

  &::before {
    --grid-size: 40px;

    content: "";
    display: block;
    position: fixed;
    inset: 0;
    z-index: -2;

    inline-size: 100vw;
    block-size: 100vh;
    background-color: transparent;

    background-size: var(--grid-size) var(--grid-size);
    background-image: linear-gradient(to right, var(--theme--surface--color) 1pt, transparent 1pt), linear-gradient(to bottom, var(--theme--surface--color) 1pt, transparent 1pt);
  }

  >main {
    flex-grow: 1;

    display: flex;
    flex-flow: column nowrap;
  }

  /* note: reduce base font size for print */
  @media print {
    font-size: 14px;
  }
}

#background {
  inline-size: 100vw;
  block-size: auto;
  position: fixed;
  inset-inline-start: 0;
  inset-block-start: 0;
  z-index: -1;
}

:is(.title) {
  font-family: var(--theme--heading--FontFamily);
  font-size: var(--title--FontSize, 1em);

  font-weight: var(--theme--FontWeight--medium);
  line-height: var(--title--LineHeight, var(--theme--heading--LineHeight));
  text-transform: var(--title--TextTransform, uppercase);
  padding: var(--title--Padding, 0);

  inline-size: max-content;
  max-inline-size: 100%;

  &:is(.highlight) {
    position: relative;
    transform-origin: left;

    &::before {
        content: "";
        display: block;
        inline-size: 100cqi;
        block-size: 2em;
        background: var(--theme--surface--color--accent);
        position: absolute;
        z-index: -1;
        pointer-events: none;
        inset-inline-end: -0.5em;
        inset-block-start: -0.4em;

        @media (prefers-color-scheme: dark) {
          background: none;
          border-block-end: 5px solid var(--theme--ui--color);
          inset-block-end: -.2em;
        }

        @media not (prefers-reduced-motion: reduce) {
          @supports (animation-timeline: scroll()) {
            animation: var(--animation, roll-in) linear both;
            animation-timeline: view();
            animation-range: 0 30vh;
          }

          @supports not (animation-timeline: scroll()) {
            animation: var(--animation, roll-in) .8s linear forwards;
          }
        }
    }

    a {
      text-decoration-color: color-mix(in hsl, var(--theme--ui--color) 80%, transparent);
    }

    &:not(:only-child) {
      margin-block-end: 1em;
    }
  }

  &[slot="header"]:only-of-type {
    margin-block: 0;
  }
}

:is(.headline) {
  font-family: var(--theme--heading--FontFamily);
  font-size: var(--headline--FontSize, 2em);
  font-weight: var(--theme--FontWeight--light);
  line-height: var(--theme--text--LineHeight);

  @container (width <= 500px) {
    --headline--FontSize: 1.3em;
  }

  @media (prefers-color-scheme: dark) {
    font-weight: var(--theme--FontWeight);
  }

  &:has(+ p) {
    margin-block-end: 0;
  }

  &.company-name {
    margin-block-start: 0;
  }
}

.employee-title {
  white-space: nowrap;
}
/* ... */

